sort.basic.cocktail.AlgCocktailSort2.scala.error
Erreur de compilation :
AlgCocktailSort2:15: error: unclosed character literal
    print('ici')
              ^AlgCocktailSort2:23: error: unclosed character literal
    print('la')
             ^AlgCocktailSort2:15: error: ')' expected but something found.
    print('ici')
              ^